# ---------------------------------------------------------------------------
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
# 
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ---------------------------------------------------------------------------

cc_sources = \
    decaf/internal/AprPool.cpp \
    decaf/internal/DecafRuntime.cpp \
    decaf/internal/io/StandardErrorOutputStream.cpp \
    decaf/internal/io/StandardInputStream.cpp \
    decaf/internal/io/StandardOutputStream.cpp \
    decaf/internal/net/DefaultServerSocketFactory.cpp \
    decaf/internal/net/DefaultSocketFactory.cpp \
    decaf/internal/net/Network.cpp \
    decaf/internal/net/SocketFileDescriptor.cpp \
    decaf/internal/net/URIEncoderDecoder.cpp \
    decaf/internal/net/URIHelper.cpp \
    decaf/internal/net/URIType.cpp \
    decaf/internal/net/URLStreamHandlerManager.cpp \
    decaf/internal/net/URLType.cpp \
    decaf/internal/net/URLUtils.cpp \
    decaf/internal/net/file/FileHandler.cpp \
    decaf/internal/net/http/HttpHandler.cpp \
    decaf/internal/net/https/HttpsHandler.cpp \
    decaf/internal/net/ssl/DefaultSSLContext.cpp \
    decaf/internal/net/ssl/DefaultSSLServerSocketFactory.cpp \
    decaf/internal/net/ssl/DefaultSSLSocketFactory.cpp \
    decaf/internal/net/ssl/openssl/OpenSSLContextSpi.cpp \
    decaf/internal/net/ssl/openssl/OpenSSLParameters.cpp \
    decaf/internal/net/ssl/openssl/OpenSSLServerSocket.cpp \
    decaf/internal/net/ssl/openssl/OpenSSLServerSocketFactory.cpp \
    decaf/internal/net/ssl/openssl/OpenSSLSocket.cpp \
    decaf/internal/net/ssl/openssl/OpenSSLSocketException.cpp \
    decaf/internal/net/ssl/openssl/OpenSSLSocketFactory.cpp \
    decaf/internal/net/ssl/openssl/OpenSSLSocketInputStream.cpp \
    decaf/internal/net/ssl/openssl/OpenSSLSocketOutputStream.cpp \
    decaf/internal/net/tcp/TcpSocket.cpp \
    decaf/internal/net/tcp/TcpSocketInputStream.cpp \
    decaf/internal/net/tcp/TcpSocketOutputStream.cpp \
    decaf/internal/nio/BufferFactory.cpp \
    decaf/internal/nio/ByteArrayBuffer.cpp \
    decaf/internal/nio/CharArrayBuffer.cpp \
    decaf/internal/nio/DoubleArrayBuffer.cpp \
    decaf/internal/nio/FloatArrayBuffer.cpp \
    decaf/internal/nio/IntArrayBuffer.cpp \
    decaf/internal/nio/LongArrayBuffer.cpp \
    decaf/internal/nio/ShortArrayBuffer.cpp \
    decaf/internal/security/Engine.cpp \
    decaf/internal/security/SecurityRuntime.cpp \
    decaf/internal/security/ServiceRegistry.cpp \
    decaf/internal/security/provider/DefaultMessageDigestProviderService.cpp \
    decaf/internal/security/provider/DefaultProvider.cpp \
    decaf/internal/security/provider/DefaultSecureRandomProviderService.cpp \
    decaf/internal/security/provider/crypto/MD4MessageDigestSpi.cpp \
    decaf/internal/security/provider/crypto/MD5MessageDigestSpi.cpp \
    decaf/internal/security/provider/crypto/SHA1MessageDigestSpi.cpp \
    decaf/internal/security/unix/SecureRandomImpl.cpp \
    decaf/internal/util/ByteArrayAdapter.cpp \
    decaf/internal/util/GenericResource.cpp \
    decaf/internal/util/HexStringParser.cpp \
    decaf/internal/util/Resource.cpp \
    decaf/internal/util/ResourceLifecycleManager.cpp \
    decaf/internal/util/StringUtils.cpp \
    decaf/internal/util/TimerTaskHeap.cpp \
    decaf/internal/util/concurrent/ExecutorsSupport.cpp \
    decaf/internal/util/concurrent/SynchronizableImpl.cpp \
    decaf/internal/util/concurrent/ThreadLocalImpl.cpp \
    decaf/internal/util/concurrent/Threading.cpp \
    decaf/internal/util/concurrent/unix/Atomics.cpp \
    decaf/internal/util/concurrent/unix/PlatformThread.cpp \
    decaf/internal/util/zip/adler32.c \
    decaf/internal/util/zip/crc32.c \
    decaf/internal/util/zip/deflate.c \
    decaf/internal/util/zip/gzclose.c \
    decaf/internal/util/zip/gzlib.c \
    decaf/internal/util/zip/gzread.c \
    decaf/internal/util/zip/gzwrite.c \
    decaf/internal/util/zip/infback.c \
    decaf/internal/util/zip/inffast.c \
    decaf/internal/util/zip/inflate.c \
    decaf/internal/util/zip/inftrees.c \
    decaf/internal/util/zip/trees.c \
    decaf/internal/util/zip/uncompr.c \
    decaf/internal/util/zip/zutil.c \
    decaf/io/BlockingByteArrayInputStream.cpp \
    decaf/io/BufferedInputStream.cpp \
    decaf/io/BufferedOutputStream.cpp \
    decaf/io/ByteArrayInputStream.cpp \
    decaf/io/ByteArrayOutputStream.cpp \
    decaf/io/Closeable.cpp \
    decaf/io/DataInput.cpp \
    decaf/io/DataInputStream.cpp \
    decaf/io/DataOutput.cpp \
    decaf/io/DataOutputStream.cpp \
    decaf/io/EOFException.cpp \
    decaf/io/FileDescriptor.cpp \
    decaf/io/FilterInputStream.cpp \
    decaf/io/FilterOutputStream.cpp \
    decaf/io/Flushable.cpp \
    decaf/io/IOException.cpp \
    decaf/io/InputStream.cpp \
    decaf/io/InputStreamReader.cpp \
    decaf/io/InterruptedIOException.cpp \
    decaf/io/OutputStream.cpp \
    decaf/io/OutputStreamWriter.cpp \
    decaf/io/PushbackInputStream.cpp \
    decaf/io/Reader.cpp \
    decaf/io/UTFDataFormatException.cpp \
    decaf/io/UnsupportedEncodingException.cpp \
    decaf/io/Writer.cpp \
    decaf/lang/AbstractStringBuilder.cpp \
    decaf/lang/Appendable.cpp \
    decaf/lang/Boolean.cpp \
    decaf/lang/Byte.cpp \
    decaf/lang/CharSequence.cpp \
    decaf/lang/Character.cpp \
    decaf/lang/Comparable.cpp \
    decaf/lang/Double.cpp \
    decaf/lang/Exception.cpp \
    decaf/lang/Float.cpp \
    decaf/lang/Integer.cpp \
    decaf/lang/Iterable.cpp \
    decaf/lang/Long.cpp \
    decaf/lang/Math.cpp \
    decaf/lang/Number.cpp \
    decaf/lang/Readable.cpp \
    decaf/lang/Runnable.cpp \
    decaf/lang/Runtime.cpp \
    decaf/lang/Short.cpp \
    decaf/lang/String.cpp \
    decaf/lang/StringBuffer.cpp \
    decaf/lang/StringBuilder.cpp \
    decaf/lang/System.cpp \
    decaf/lang/Thread.cpp \
    decaf/lang/ThreadGroup.cpp \
    decaf/lang/ThreadLocal.cpp \
    decaf/lang/Throwable.cpp \
    decaf/lang/Types.cpp \
    decaf/lang/exceptions/ArrayIndexOutOfBoundsException.cpp \
    decaf/lang/exceptions/ClassCastException.cpp \
    decaf/lang/exceptions/CloneNotSupportedException.cpp \
    decaf/lang/exceptions/IllegalArgumentException.cpp \
    decaf/lang/exceptions/IllegalMonitorStateException.cpp \
    decaf/lang/exceptions/IllegalStateException.cpp \
    decaf/lang/exceptions/IllegalThreadStateException.cpp \
    decaf/lang/exceptions/IndexOutOfBoundsException.cpp \
    decaf/lang/exceptions/InterruptedException.cpp \
    decaf/lang/exceptions/InvalidStateException.cpp \
    decaf/lang/exceptions/NegativeArraySizeException.cpp \
    decaf/lang/exceptions/NullPointerException.cpp \
    decaf/lang/exceptions/NumberFormatException.cpp \
    decaf/lang/exceptions/OutOfMemoryError.cpp \
    decaf/lang/exceptions/RuntimeException.cpp \
    decaf/lang/exceptions/SecurityException.cpp \
    decaf/lang/exceptions/StringIndexOutOfBoundsException.cpp \
    decaf/lang/exceptions/UnsupportedOperationException.cpp \
    decaf/net/BindException.cpp \
    decaf/net/ConnectException.cpp \
    decaf/net/ContentHandlerFactory.cpp \
    decaf/net/DatagramPacket.cpp \
    decaf/net/FileNameMap.cpp \
    decaf/net/HttpRetryException.cpp \
    decaf/net/HttpURLConnection.cpp \
    decaf/net/Inet4Address.cpp \
    decaf/net/Inet6Address.cpp \
    decaf/net/InetAddress.cpp \
    decaf/net/InetSocketAddress.cpp \
    decaf/net/MalformedURLException.cpp \
    decaf/net/NoRouteToHostException.cpp \
    decaf/net/PortUnreachableException.cpp \
    decaf/net/ProtocolException.cpp \
    decaf/net/Proxy.cpp \
    decaf/net/ServerSocket.cpp \
    decaf/net/ServerSocketFactory.cpp \
    decaf/net/Socket.cpp \
    decaf/net/SocketAddress.cpp \
    decaf/net/SocketError.cpp \
    decaf/net/SocketException.cpp \
    decaf/net/SocketFactory.cpp \
    decaf/net/SocketImpl.cpp \
    decaf/net/SocketImplFactory.cpp \
    decaf/net/SocketOptions.cpp \
    decaf/net/SocketTimeoutException.cpp \
    decaf/net/URI.cpp \
    decaf/net/URISyntaxException.cpp \
    decaf/net/URL.cpp \
    decaf/net/URLConnection.cpp \
    decaf/net/URLDecoder.cpp \
    decaf/net/URLEncoder.cpp \
    decaf/net/URLStreamHandler.cpp \
    decaf/net/URLStreamHandlerFactory.cpp \
    decaf/net/UnknownHostException.cpp \
    decaf/net/UnknownServiceException.cpp \
    decaf/net/ssl/SSLContext.cpp \
    decaf/net/ssl/SSLContextSpi.cpp \
    decaf/net/ssl/SSLParameters.cpp \
    decaf/net/ssl/SSLServerSocket.cpp \
    decaf/net/ssl/SSLServerSocketFactory.cpp \
    decaf/net/ssl/SSLSocket.cpp \
    decaf/net/ssl/SSLSocketFactory.cpp \
    decaf/nio/Buffer.cpp \
    decaf/nio/BufferOverflowException.cpp \
    decaf/nio/BufferUnderflowException.cpp \
    decaf/nio/ByteBuffer.cpp \
    decaf/nio/CharBuffer.cpp \
    decaf/nio/DoubleBuffer.cpp \
    decaf/nio/FloatBuffer.cpp \
    decaf/nio/IntBuffer.cpp \
    decaf/nio/InvalidMarkException.cpp \
    decaf/nio/LongBuffer.cpp \
    decaf/nio/ReadOnlyBufferException.cpp \
    decaf/nio/ShortBuffer.cpp \
    decaf/security/DigestException.cpp \
    decaf/security/GeneralSecurityException.cpp \
    decaf/security/InvalidKeyException.cpp \
    decaf/security/Key.cpp \
    decaf/security/KeyException.cpp \
    decaf/security/KeyManagementException.cpp \
    decaf/security/MessageDigest.cpp \
    decaf/security/MessageDigestSpi.cpp \
    decaf/security/NoSuchAlgorithmException.cpp \
    decaf/security/NoSuchProviderException.cpp \
    decaf/security/Principal.cpp \
    decaf/security/Provider.cpp \
    decaf/security/ProviderException.cpp \
    decaf/security/ProviderService.cpp \
    decaf/security/PublicKey.cpp \
    decaf/security/SecureRandom.cpp \
    decaf/security/SecureRandomSpi.cpp \
    decaf/security/Security.cpp \
    decaf/security/SecuritySpi.cpp \
    decaf/security/SignatureException.cpp \
    decaf/security/auth/x500/X500Principal.cpp \
    decaf/security/cert/Certificate.cpp \
    decaf/security/cert/CertificateEncodingException.cpp \
    decaf/security/cert/CertificateException.cpp \
    decaf/security/cert/CertificateExpiredException.cpp \
    decaf/security/cert/CertificateNotYetValidException.cpp \
    decaf/security/cert/CertificateParsingException.cpp \
    decaf/security/cert/X509Certificate.cpp \
    decaf/util/AbstractCollection.cpp \
    decaf/util/AbstractList.cpp \
    decaf/util/AbstractMap.cpp \
    decaf/util/AbstractQueue.cpp \
    decaf/util/AbstractSequentialList.cpp \
    decaf/util/AbstractSet.cpp \
    decaf/util/ArrayList.cpp \
    decaf/util/Arrays.cpp \
    decaf/util/BitSet.cpp \
    decaf/util/Collection.cpp \
    decaf/util/Collections.cpp \
    decaf/util/Comparator.cpp \
    decaf/util/ConcurrentModificationException.cpp \
    decaf/util/Date.cpp \
    decaf/util/Deque.cpp \
    decaf/util/HashCode.cpp \
    decaf/util/HashMap.cpp \
    decaf/util/HashSet.cpp \
    decaf/util/Iterator.cpp \
    decaf/util/LRUCache.cpp \
    decaf/util/LinkedHashMap.cpp \
    decaf/util/LinkedHashSet.cpp \
    decaf/util/LinkedList.cpp \
    decaf/util/List.cpp \
    decaf/util/ListIterator.cpp \
    decaf/util/Map.cpp \
    decaf/util/MapEntry.cpp \
    decaf/util/NoSuchElementException.cpp \
    decaf/util/PriorityQueue.cpp \
    decaf/util/Properties.cpp \
    decaf/util/Queue.cpp \
    decaf/util/Random.cpp \
    decaf/util/Set.cpp \
    decaf/util/StlList.cpp \
    decaf/util/StlMap.cpp \
    decaf/util/StlQueue.cpp \
    decaf/util/StlSet.cpp \
    decaf/util/StringTokenizer.cpp \
    decaf/util/Timer.cpp \
    decaf/util/TimerTask.cpp \
    decaf/util/UUID.cpp \
    decaf/util/comparators/Equals.cpp \
    decaf/util/comparators/Less.cpp \
    decaf/util/concurrent/AbstractExecutorService.cpp \
    decaf/util/concurrent/BlockingQueue.cpp \
    decaf/util/concurrent/BrokenBarrierException.cpp \
    decaf/util/concurrent/Callable.cpp \
    decaf/util/concurrent/CancellationException.cpp \
    decaf/util/concurrent/ConcurrentHashMap.cpp \
    decaf/util/concurrent/ConcurrentMap.cpp \
    decaf/util/concurrent/ConcurrentStlMap.cpp \
    decaf/util/concurrent/CopyOnWriteArrayList.cpp \
    decaf/util/concurrent/CopyOnWriteArraySet.cpp \
    decaf/util/concurrent/CountDownLatch.cpp \
    decaf/util/concurrent/Delayed.cpp \
    decaf/util/concurrent/ExecutionException.cpp \
    decaf/util/concurrent/Executor.cpp \
    decaf/util/concurrent/ExecutorService.cpp \
    decaf/util/concurrent/Executors.cpp \
    decaf/util/concurrent/Future.cpp \
    decaf/util/concurrent/FutureTask.cpp \
    decaf/util/concurrent/LinkedBlockingQueue.cpp \
    decaf/util/concurrent/Lock.cpp \
    decaf/util/concurrent/Mutex.cpp \
    decaf/util/concurrent/RejectedExecutionException.cpp \
    decaf/util/concurrent/RejectedExecutionHandler.cpp \
    decaf/util/concurrent/RunnableFuture.cpp \
    decaf/util/concurrent/Semaphore.cpp \
    decaf/util/concurrent/Synchronizable.cpp \
    decaf/util/concurrent/SynchronousQueue.cpp \
    decaf/util/concurrent/ThreadFactory.cpp \
    decaf/util/concurrent/ThreadPoolExecutor.cpp \
    decaf/util/concurrent/TimeUnit.cpp \
    decaf/util/concurrent/TimeoutException.cpp \
    decaf/util/concurrent/atomic/AtomicBoolean.cpp \
    decaf/util/concurrent/atomic/AtomicInteger.cpp \
    decaf/util/concurrent/atomic/AtomicRefCounter.cpp \
    decaf/util/concurrent/atomic/AtomicReference.cpp \
    decaf/util/concurrent/locks/AbstractOwnableSynchronizer.cpp \
    decaf/util/concurrent/locks/AbstractQueuedSynchronizer.cpp \
    decaf/util/concurrent/locks/Condition.cpp \
    decaf/util/concurrent/locks/Lock.cpp \
    decaf/util/concurrent/locks/LockSupport.cpp \
    decaf/util/concurrent/locks/ReadWriteLock.cpp \
    decaf/util/concurrent/locks/ReentrantLock.cpp \
    decaf/util/concurrent/locks/ReentrantReadWriteLock.cpp \
    decaf/util/logging/ConsoleHandler.cpp \
    decaf/util/logging/ErrorManager.cpp \
    decaf/util/logging/Formatter.cpp \
    decaf/util/logging/Handler.cpp \
    decaf/util/logging/Level.cpp \
    decaf/util/logging/LogManager.cpp \
    decaf/util/logging/LogRecord.cpp \
    decaf/util/logging/LogWriter.cpp \
    decaf/util/logging/Logger.cpp \
    decaf/util/logging/LoggerHierarchy.cpp \
    decaf/util/logging/SimpleFormatter.cpp \
    decaf/util/logging/SimpleLogger.cpp \
    decaf/util/logging/StreamHandler.cpp \
    decaf/util/logging/XMLFormatter.cpp \
    decaf/util/zip/Adler32.cpp \
    decaf/util/zip/CRC32.cpp \
    decaf/util/zip/CheckedInputStream.cpp \
    decaf/util/zip/CheckedOutputStream.cpp \
    decaf/util/zip/Checksum.cpp \
    decaf/util/zip/DataFormatException.cpp \
    decaf/util/zip/Deflater.cpp \
    decaf/util/zip/DeflaterOutputStream.cpp \
    decaf/util/zip/Inflater.cpp \
    decaf/util/zip/InflaterInputStream.cpp \
    decaf/util/zip/ZipException.cpp


h_sources = \
    decaf/internal/AprPool.h \
    decaf/internal/DecafRuntime.h \
    decaf/internal/io/StandardErrorOutputStream.h \
    decaf/internal/io/StandardInputStream.h \
    decaf/internal/io/StandardOutputStream.h \
    decaf/internal/net/DefaultServerSocketFactory.h \
    decaf/internal/net/DefaultSocketFactory.h \
    decaf/internal/net/Network.h \
    decaf/internal/net/SocketFileDescriptor.h \
    decaf/internal/net/URIEncoderDecoder.h \
    decaf/internal/net/URIHelper.h \
    decaf/internal/net/URIType.h \
    decaf/internal/net/URLStreamHandlerManager.h \
    decaf/internal/net/URLType.h \
    decaf/internal/net/URLUtils.h \
    decaf/internal/net/file/FileHandler.h \
    decaf/internal/net/http/HttpHandler.h \
    decaf/internal/net/https/HttpsHandler.h \
    decaf/internal/net/ssl/DefaultSSLContext.h \
    decaf/internal/net/ssl/DefaultSSLServerSocketFactory.h \
    decaf/internal/net/ssl/DefaultSSLSocketFactory.h \
    decaf/internal/net/ssl/openssl/OpenSSLContextSpi.h \
    decaf/internal/net/ssl/openssl/OpenSSLParameters.h \
    decaf/internal/net/ssl/openssl/OpenSSLServerSocket.h \
    decaf/internal/net/ssl/openssl/OpenSSLServerSocketFactory.h \
    decaf/internal/net/ssl/openssl/OpenSSLSocket.h \
    decaf/internal/net/ssl/openssl/OpenSSLSocketException.h \
    decaf/internal/net/ssl/openssl/OpenSSLSocketFactory.h \
    decaf/internal/net/ssl/openssl/OpenSSLSocketInputStream.h \
    decaf/internal/net/ssl/openssl/OpenSSLSocketOutputStream.h \
    decaf/internal/net/tcp/TcpSocket.h \
    decaf/internal/net/tcp/TcpSocketInputStream.h \
    decaf/internal/net/tcp/TcpSocketOutputStream.h \
    decaf/internal/nio/BufferFactory.h \
    decaf/internal/nio/ByteArrayBuffer.h \
    decaf/internal/nio/CharArrayBuffer.h \
    decaf/internal/nio/DoubleArrayBuffer.h \
    decaf/internal/nio/FloatArrayBuffer.h \
    decaf/internal/nio/IntArrayBuffer.h \
    decaf/internal/nio/LongArrayBuffer.h \
    decaf/internal/nio/ShortArrayBuffer.h \
    decaf/internal/security/Engine.h \
    decaf/internal/security/SecurityRuntime.h \
    decaf/internal/security/ServiceRegistry.h \
    decaf/internal/security/provider/DefaultMessageDigestProviderService.h \
    decaf/internal/security/provider/DefaultProvider.h \
    decaf/internal/security/provider/DefaultSecureRandomProviderService.h \
    decaf/internal/security/provider/crypto/MD4MessageDigestSpi.h \
    decaf/internal/security/provider/crypto/MD5MessageDigestSpi.h \
    decaf/internal/security/provider/crypto/SHA1MessageDigestSpi.h \
    decaf/internal/security/unix/SecureRandomImpl.h \
    decaf/internal/security/windows/SecureRandomImpl.h \
    decaf/internal/util/ByteArrayAdapter.h \
    decaf/internal/util/GenericResource.h \
    decaf/internal/util/HexStringParser.h \
    decaf/internal/util/Resource.h \
    decaf/internal/util/ResourceLifecycleManager.h \
    decaf/internal/util/StringUtils.h \
    decaf/internal/util/TimerTaskHeap.h \
    decaf/internal/util/concurrent/Atomics.h \
    decaf/internal/util/concurrent/ExecutorsSupport.h \
    decaf/internal/util/concurrent/PlatformThread.h \
    decaf/internal/util/concurrent/SynchronizableImpl.h \
    decaf/internal/util/concurrent/ThreadLocalImpl.h \
    decaf/internal/util/concurrent/Threading.h \
    decaf/internal/util/concurrent/ThreadingTypes.h \
    decaf/internal/util/concurrent/TransferQueue.h \
    decaf/internal/util/concurrent/TransferStack.h \
    decaf/internal/util/concurrent/Transferer.h \
    decaf/internal/util/concurrent/unix/PlatformDefs.h \
    decaf/internal/util/concurrent/windows/PlatformDefs.h \
    decaf/internal/util/zip/crc32.h \
    decaf/internal/util/zip/deflate.h \
    decaf/internal/util/zip/gzguts.h \
    decaf/internal/util/zip/inffast.h \
    decaf/internal/util/zip/inffixed.h \
    decaf/internal/util/zip/inflate.h \
    decaf/internal/util/zip/inftrees.h \
    decaf/internal/util/zip/trees.h \
    decaf/internal/util/zip/zconf.h \
    decaf/internal/util/zip/zlib.h \
    decaf/internal/util/zip/zutil.h \
    decaf/io/BlockingByteArrayInputStream.h \
    decaf/io/BufferedInputStream.h \
    decaf/io/BufferedOutputStream.h \
    decaf/io/ByteArrayInputStream.h \
    decaf/io/ByteArrayOutputStream.h \
    decaf/io/Closeable.h \
    decaf/io/DataInput.h \
    decaf/io/DataInputStream.h \
    decaf/io/DataOutput.h \
    decaf/io/DataOutputStream.h \
    decaf/io/EOFException.h \
    decaf/io/FileDescriptor.h \
    decaf/io/FilterInputStream.h \
    decaf/io/FilterOutputStream.h \
    decaf/io/Flushable.h \
    decaf/io/IOException.h \
    decaf/io/InputStream.h \
    decaf/io/InputStreamReader.h \
    decaf/io/InterruptedIOException.h \
    decaf/io/OutputStream.h \
    decaf/io/OutputStreamWriter.h \
    decaf/io/PushbackInputStream.h \
    decaf/io/Reader.h \
    decaf/io/UTFDataFormatException.h \
    decaf/io/UnsupportedEncodingException.h \
    decaf/io/Writer.h \
    decaf/lang/AbstractStringBuilder.h \
    decaf/lang/Appendable.h \
    decaf/lang/ArrayPointer.h \
    decaf/lang/Boolean.h \
    decaf/lang/Byte.h \
    decaf/lang/CharSequence.h \
    decaf/lang/Character.h \
    decaf/lang/Comparable.h \
    decaf/lang/Double.h \
    decaf/lang/Exception.h \
    decaf/lang/Float.h \
    decaf/lang/Integer.h \
    decaf/lang/Iterable.h \
    decaf/lang/Long.h \
    decaf/lang/Math.h \
    decaf/lang/Number.h \
    decaf/lang/Pointer.h \
    decaf/lang/Readable.h \
    decaf/lang/Runnable.h \
    decaf/lang/Runtime.h \
    decaf/lang/Short.h \
    decaf/lang/String.h \
    decaf/lang/StringBuffer.h \
    decaf/lang/StringBuilder.h \
    decaf/lang/System.h \
    decaf/lang/Thread.h \
    decaf/lang/ThreadGroup.h \
    decaf/lang/ThreadLocal.h \
    decaf/lang/Throwable.h \
    decaf/lang/Types.h \
    decaf/lang/exceptions/ArrayIndexOutOfBoundsException.h \
    decaf/lang/exceptions/ClassCastException.h \
    decaf/lang/exceptions/CloneNotSupportedException.h \
    decaf/lang/exceptions/ExceptionDefines.h \
    decaf/lang/exceptions/IllegalArgumentException.h \
    decaf/lang/exceptions/IllegalMonitorStateException.h \
    decaf/lang/exceptions/IllegalStateException.h \
    decaf/lang/exceptions/IllegalThreadStateException.h \
    decaf/lang/exceptions/IndexOutOfBoundsException.h \
    decaf/lang/exceptions/InterruptedException.h \
    decaf/lang/exceptions/InvalidStateException.h \
    decaf/lang/exceptions/NegativeArraySizeException.h \
    decaf/lang/exceptions/NullPointerException.h \
    decaf/lang/exceptions/NumberFormatException.h \
    decaf/lang/exceptions/OutOfMemoryError.h \
    decaf/lang/exceptions/RuntimeException.h \
    decaf/lang/exceptions/SecurityException.h \
    decaf/lang/exceptions/StringIndexOutOfBoundsException.h \
    decaf/lang/exceptions/UnsupportedOperationException.h \
    decaf/net/BindException.h \
    decaf/net/ConnectException.h \
    decaf/net/ContentHandlerFactory.h \
    decaf/net/DatagramPacket.h \
    decaf/net/FileNameMap.h \
    decaf/net/HttpRetryException.h \
    decaf/net/HttpURLConnection.h \
    decaf/net/Inet4Address.h \
    decaf/net/Inet6Address.h \
    decaf/net/InetAddress.h \
    decaf/net/InetSocketAddress.h \
    decaf/net/MalformedURLException.h \
    decaf/net/NoRouteToHostException.h \
    decaf/net/PortUnreachableException.h \
    decaf/net/ProtocolException.h \
    decaf/net/Proxy.h \
    decaf/net/ServerSocket.h \
    decaf/net/ServerSocketFactory.h \
    decaf/net/Socket.h \
    decaf/net/SocketAddress.h \
    decaf/net/SocketError.h \
    decaf/net/SocketException.h \
    decaf/net/SocketFactory.h \
    decaf/net/SocketImpl.h \
    decaf/net/SocketImplFactory.h \
    decaf/net/SocketOptions.h \
    decaf/net/SocketTimeoutException.h \
    decaf/net/URI.h \
    decaf/net/URISyntaxException.h \
    decaf/net/URL.h \
    decaf/net/URLConnection.h \
    decaf/net/URLDecoder.h \
    decaf/net/URLEncoder.h \
    decaf/net/URLStreamHandler.h \
    decaf/net/URLStreamHandlerFactory.h \
    decaf/net/UnknownHostException.h \
    decaf/net/UnknownServiceException.h \
    decaf/net/ssl/SSLContext.h \
    decaf/net/ssl/SSLContextSpi.h \
    decaf/net/ssl/SSLParameters.h \
    decaf/net/ssl/SSLServerSocket.h \
    decaf/net/ssl/SSLServerSocketFactory.h \
    decaf/net/ssl/SSLSocket.h \
    decaf/net/ssl/SSLSocketFactory.h \
    decaf/nio/Buffer.h \
    decaf/nio/BufferOverflowException.h \
    decaf/nio/BufferUnderflowException.h \
    decaf/nio/ByteBuffer.h \
    decaf/nio/CharBuffer.h \
    decaf/nio/DoubleBuffer.h \
    decaf/nio/FloatBuffer.h \
    decaf/nio/IntBuffer.h \
    decaf/nio/InvalidMarkException.h \
    decaf/nio/LongBuffer.h \
    decaf/nio/ReadOnlyBufferException.h \
    decaf/nio/ShortBuffer.h \
    decaf/security/DigestException.h \
    decaf/security/GeneralSecurityException.h \
    decaf/security/InvalidKeyException.h \
    decaf/security/Key.h \
    decaf/security/KeyException.h \
    decaf/security/KeyManagementException.h \
    decaf/security/MessageDigest.h \
    decaf/security/MessageDigestSpi.h \
    decaf/security/NoSuchAlgorithmException.h \
    decaf/security/NoSuchProviderException.h \
    decaf/security/Principal.h \
    decaf/security/Provider.h \
    decaf/security/ProviderException.h \
    decaf/security/ProviderService.h \
    decaf/security/PublicKey.h \
    decaf/security/SecureRandom.h \
    decaf/security/SecureRandomSpi.h \
    decaf/security/Security.h \
    decaf/security/SecuritySpi.h \
    decaf/security/SignatureException.h \
    decaf/security/auth/x500/X500Principal.h \
    decaf/security/cert/Certificate.h \
    decaf/security/cert/CertificateEncodingException.h \
    decaf/security/cert/CertificateException.h \
    decaf/security/cert/CertificateExpiredException.h \
    decaf/security/cert/CertificateNotYetValidException.h \
    decaf/security/cert/CertificateParsingException.h \
    decaf/security/cert/X509Certificate.h \
    decaf/util/AbstractCollection.h \
    decaf/util/AbstractList.h \
    decaf/util/AbstractMap.h \
    decaf/util/AbstractQueue.h \
    decaf/util/AbstractSequentialList.h \
    decaf/util/AbstractSet.h \
    decaf/util/ArrayList.h \
    decaf/util/Arrays.h \
    decaf/util/BitSet.h \
    decaf/util/Collection.h \
    decaf/util/Collections.h \
    decaf/util/Comparator.h \
    decaf/util/ConcurrentModificationException.h \
    decaf/util/Config.h \
    decaf/util/Date.h \
    decaf/util/Deque.h \
    decaf/util/HashCode.h \
    decaf/util/HashMap.h \
    decaf/util/HashSet.h \
    decaf/util/Iterator.h \
    decaf/util/LRUCache.h \
    decaf/util/LinkedHashMap.h \
    decaf/util/LinkedHashSet.h \
    decaf/util/LinkedList.h \
    decaf/util/List.h \
    decaf/util/ListIterator.h \
    decaf/util/Map.h \
    decaf/util/MapEntry.h \
    decaf/util/NoSuchElementException.h \
    decaf/util/PriorityQueue.h \
    decaf/util/Properties.h \
    decaf/util/Queue.h \
    decaf/util/Random.h \
    decaf/util/Set.h \
    decaf/util/StlList.h \
    decaf/util/StlMap.h \
    decaf/util/StlQueue.h \
    decaf/util/StlSet.h \
    decaf/util/StringTokenizer.h \
    decaf/util/Timer.h \
    decaf/util/TimerTask.h \
    decaf/util/UUID.h \
    decaf/util/comparators/Equals.h \
    decaf/util/comparators/Less.h \
    decaf/util/concurrent/AbstractExecutorService.h \
    decaf/util/concurrent/BlockingQueue.h \
    decaf/util/concurrent/BrokenBarrierException.h \
    decaf/util/concurrent/Callable.h \
    decaf/util/concurrent/CancellationException.h \
    decaf/util/concurrent/Concurrent.h \
    decaf/util/concurrent/ConcurrentHashMap.h \
    decaf/util/concurrent/ConcurrentMap.h \
    decaf/util/concurrent/ConcurrentStlMap.h \
    decaf/util/concurrent/CopyOnWriteArrayList.h \
    decaf/util/concurrent/CopyOnWriteArraySet.h \
    decaf/util/concurrent/CountDownLatch.h \
    decaf/util/concurrent/Delayed.h \
    decaf/util/concurrent/ExecutionException.h \
    decaf/util/concurrent/Executor.h \
    decaf/util/concurrent/ExecutorService.h \
    decaf/util/concurrent/Executors.h \
    decaf/util/concurrent/Future.h \
    decaf/util/concurrent/FutureTask.h \
    decaf/util/concurrent/LinkedBlockingQueue.h \
    decaf/util/concurrent/Lock.h \
    decaf/util/concurrent/Mutex.h \
    decaf/util/concurrent/RejectedExecutionException.h \
    decaf/util/concurrent/RejectedExecutionHandler.h \
    decaf/util/concurrent/RunnableFuture.h \
    decaf/util/concurrent/Semaphore.h \
    decaf/util/concurrent/Synchronizable.h \
    decaf/util/concurrent/SynchronousQueue.h \
    decaf/util/concurrent/ThreadFactory.h \
    decaf/util/concurrent/ThreadPoolExecutor.h \
    decaf/util/concurrent/TimeUnit.h \
    decaf/util/concurrent/TimeoutException.h \
    decaf/util/concurrent/atomic/AtomicBoolean.h \
    decaf/util/concurrent/atomic/AtomicInteger.h \
    decaf/util/concurrent/atomic/AtomicRefCounter.h \
    decaf/util/concurrent/atomic/AtomicReference.h \
    decaf/util/concurrent/locks/AbstractOwnableSynchronizer.h \
    decaf/util/concurrent/locks/AbstractQueuedSynchronizer.h \
    decaf/util/concurrent/locks/Condition.h \
    decaf/util/concurrent/locks/Lock.h \
    decaf/util/concurrent/locks/LockSupport.h \
    decaf/util/concurrent/locks/ReadWriteLock.h \
    decaf/util/concurrent/locks/ReentrantLock.h \
    decaf/util/concurrent/locks/ReentrantReadWriteLock.h \
    decaf/util/logging/ConsoleHandler.h \
    decaf/util/logging/ErrorManager.h \
    decaf/util/logging/Filter.h \
    decaf/util/logging/Formatter.h \
    decaf/util/logging/Handler.h \
    decaf/util/logging/Level.h \
    decaf/util/logging/LogManager.h \
    decaf/util/logging/LogRecord.h \
    decaf/util/logging/LogWriter.h \
    decaf/util/logging/Logger.h \
    decaf/util/logging/LoggerCommon.h \
    decaf/util/logging/LoggerDefines.h \
    decaf/util/logging/LoggerHierarchy.h \
    decaf/util/logging/MarkBlockLogger.h \
    decaf/util/logging/PropertiesChangeListener.h \
    decaf/util/logging/SimpleFormatter.h \
    decaf/util/logging/SimpleLogger.h \
    decaf/util/logging/StreamHandler.h \
    decaf/util/logging/XMLFormatter.h \
    decaf/util/zip/Adler32.h \
    decaf/util/zip/CRC32.h \
    decaf/util/zip/CheckedInputStream.h \
    decaf/util/zip/CheckedOutputStream.h \
    decaf/util/zip/Checksum.h \
    decaf/util/zip/DataFormatException.h \
    decaf/util/zip/Deflater.h \
    decaf/util/zip/DeflaterOutputStream.h \
    decaf/util/zip/Inflater.h \
    decaf/util/zip/InflaterInputStream.h \
    decaf/util/zip/ZipException.h


##
## Compiler / Linker Info
##

lib_LTLIBRARIES= libactivemq-cpp.la
libactivemq_cpp_la_SOURCES= $(h_sources) $(cc_sources)
libactivemq_cpp_la_CXXFLAGS= $(DECAF_CXXFLAGS)
libactivemq_cpp_la_CFLAGS= $(DECAF_CFLAGS)
libactivemq_cpp_la_LDFLAGS= -version-info $(DECAF_LIBRARY_VERSION)
libactivemq_cpp_la_LIBADD= $(DECAF_LIBS)

##
## Packaging Info
##
library_includedir=$(includedir)/$(DECAF_LIBRARY_NAME)-$(DECAF_VERSION)
nobase_library_include_HEADERS = $(h_sources)
