# ---------------------------------------------------------------------------
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
# 
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ---------------------------------------------------------------------------

cc_sources = \
    decaf/internal/net/URIEncoderDecoderTest.cpp \
    decaf/internal/net/URIHelperTest.cpp \
    decaf/internal/net/ssl/DefaultSSLSocketFactoryTest.cpp \
    decaf/internal/nio/BufferFactoryTest.cpp \
    decaf/internal/nio/ByteArrayBufferTest.cpp \
    decaf/internal/nio/CharArrayBufferTest.cpp \
    decaf/internal/nio/DoubleArrayBufferTest.cpp \
    decaf/internal/nio/FloatArrayBufferTest.cpp \
    decaf/internal/nio/IntArrayBufferTest.cpp \
    decaf/internal/nio/LongArrayBufferTest.cpp \
    decaf/internal/nio/ShortArrayBufferTest.cpp \
    decaf/internal/util/ByteArrayAdapterTest.cpp \
    decaf/internal/util/TimerTaskHeapTest.cpp \
    decaf/internal/util/concurrent/TransferQueueTest.cpp \
    decaf/internal/util/concurrent/TransferStackTest.cpp \
    decaf/io/BufferedInputStreamTest.cpp \
    decaf/io/BufferedOutputStreamTest.cpp \
    decaf/io/ByteArrayInputStreamTest.cpp \
    decaf/io/ByteArrayOutputStreamTest.cpp \
    decaf/io/DataInputStreamTest.cpp \
    decaf/io/DataOutputStreamTest.cpp \
    decaf/io/FilterInputStreamTest.cpp \
    decaf/io/FilterOutputStreamTest.cpp \
    decaf/io/InputStreamReaderTest.cpp \
    decaf/io/InputStreamTest.cpp \
    decaf/io/OutputStreamTest.cpp \
    decaf/io/OutputStreamWriterTest.cpp \
    decaf/io/PushbackInputStreamTest.cpp \
    decaf/io/ReaderTest.cpp \
    decaf/io/WriterTest.cpp \
    decaf/lang/ArrayPointerTest.cpp \
    decaf/lang/BooleanTest.cpp \
    decaf/lang/ByteTest.cpp \
    decaf/lang/CharacterTest.cpp \
    decaf/lang/DoubleTest.cpp \
    decaf/lang/ExceptionTest.cpp \
    decaf/lang/FloatTest.cpp \
    decaf/lang/IntegerTest.cpp \
    decaf/lang/LongTest.cpp \
    decaf/lang/MathTest.cpp \
    decaf/lang/PointerTest.cpp \
    decaf/lang/ShortTest.cpp \
    decaf/lang/StringBufferTest.cpp \
    decaf/lang/StringBuilderTest.cpp \
    decaf/lang/StringTest.cpp \
    decaf/lang/SystemTest.cpp \
    decaf/lang/ThreadLocalTest.cpp \
    decaf/lang/ThreadTest.cpp \
    decaf/net/Inet4AddressTest.cpp \
    decaf/net/Inet6AddressTest.cpp \
    decaf/net/InetAddressTest.cpp \
    decaf/net/ServerSocketTest.cpp \
    decaf/net/SocketFactoryTest.cpp \
    decaf/net/SocketTest.cpp \
    decaf/net/URISyntaxExceptionTest.cpp \
    decaf/net/URITest.cpp \
    decaf/net/URLDecoderTest.cpp \
    decaf/net/URLEncoderTest.cpp \
    decaf/net/URLTest.cpp \
    decaf/net/ssl/SSLSocketFactoryTest.cpp \
    decaf/nio/BufferTest.cpp \
    decaf/security/MessageDigestTest.cpp \
    decaf/security/SecureRandomTest.cpp \
    decaf/util/AbstractCollectionTest.cpp \
    decaf/util/AbstractListTest.cpp \
    decaf/util/AbstractSequentialListTest.cpp \
    decaf/util/ArrayListTest.cpp \
    decaf/util/ArraysTest.cpp \
    decaf/util/BitSetTest.cpp \
    decaf/util/CollectionsTest.cpp \
    decaf/util/DateTest.cpp \
    decaf/util/Endian.cpp \
    decaf/util/HashCodeTest.cpp \
    decaf/util/HashMapTest.cpp \
    decaf/util/HashSetTest.cpp \
    decaf/util/LRUCacheTest.cpp \
    decaf/util/LinkedHashMapTest.cpp \
    decaf/util/LinkedHashSetTest.cpp \
    decaf/util/LinkedListTest.cpp \
    decaf/util/ListTest.cpp \
    decaf/util/PriorityQueueTest.cpp \
    decaf/util/PropertiesTest.cpp \
    decaf/util/QueueTest.cpp \
    decaf/util/RandomTest.cpp \
    decaf/util/SetTest.cpp \
    decaf/util/StlMapTest.cpp \
    decaf/util/StringTokenizerTest.cpp \
    decaf/util/TimerTest.cpp \
    decaf/util/UUIDTest.cpp \
    decaf/util/concurrent/AbstractExecutorServiceTest.cpp \
    decaf/util/concurrent/ConcurrentHashMapTest.cpp \
    decaf/util/concurrent/ConcurrentStlMapTest.cpp \
    decaf/util/concurrent/CopyOnWriteArrayListTest.cpp \
    decaf/util/concurrent/CopyOnWriteArraySetTest.cpp \
    decaf/util/concurrent/CountDownLatchTest.cpp \
    decaf/util/concurrent/ExecutorsTest.cpp \
    decaf/util/concurrent/ExecutorsTestSupport.cpp \
    decaf/util/concurrent/FutureTaskTest.cpp \
    decaf/util/concurrent/LinkedBlockingQueueTest.cpp \
    decaf/util/concurrent/MutexTest.cpp \
    decaf/util/concurrent/SemaphoreTest.cpp \
    decaf/util/concurrent/SynchronousQueueTest.cpp \
    decaf/util/concurrent/ThreadPoolExecutorTest.cpp \
    decaf/util/concurrent/TimeUnitTest.cpp \
    decaf/util/concurrent/atomic/AtomicBooleanTest.cpp \
    decaf/util/concurrent/atomic/AtomicIntegerTest.cpp \
    decaf/util/concurrent/atomic/AtomicReferenceTest.cpp \
    decaf/util/concurrent/locks/AbstractQueuedSynchronizerTest.cpp \
    decaf/util/concurrent/locks/LockSupportTest.cpp \
    decaf/util/concurrent/locks/ReentrantLockTest.cpp \
    decaf/util/concurrent/locks/ReentrantReadWriteLockTest.cpp \
    decaf/util/zip/Adler32Test.cpp \
    decaf/util/zip/CRC32Test.cpp \
    decaf/util/zip/CheckedInputStreamTest.cpp \
    decaf/util/zip/CheckedOutputStreamTest.cpp \
    decaf/util/zip/DeflaterOutputStreamTest.cpp \
    decaf/util/zip/DeflaterTest.cpp \
    decaf/util/zip/InflaterInputStreamTest.cpp \
    decaf/util/zip/InflaterTest.cpp \
    main.cpp \
    testRegistry.cpp \
    util/teamcity/TeamCityProgressListener.cpp


h_sources = \
    decaf/internal/net/URIEncoderDecoderTest.h \
    decaf/internal/net/URIHelperTest.h \
    decaf/internal/net/ssl/DefaultSSLSocketFactoryTest.h \
    decaf/internal/nio/BufferFactoryTest.h \
    decaf/internal/nio/ByteArrayBufferTest.h \
    decaf/internal/nio/CharArrayBufferTest.h \
    decaf/internal/nio/DoubleArrayBufferTest.h \
    decaf/internal/nio/FloatArrayBufferTest.h \
    decaf/internal/nio/IntArrayBufferTest.h \
    decaf/internal/nio/LongArrayBufferTest.h \
    decaf/internal/nio/ShortArrayBufferTest.h \
    decaf/internal/util/ByteArrayAdapterTest.h \
    decaf/internal/util/TimerTaskHeapTest.h \
    decaf/internal/util/concurrent/TransferQueueTest.h \
    decaf/internal/util/concurrent/TransferStackTest.h \
    decaf/io/BufferedInputStreamTest.h \
    decaf/io/BufferedOutputStreamTest.h \
    decaf/io/ByteArrayInputStreamTest.h \
    decaf/io/ByteArrayOutputStreamTest.h \
    decaf/io/DataInputStreamTest.h \
    decaf/io/DataOutputStreamTest.h \
    decaf/io/FilterInputStreamTest.h \
    decaf/io/FilterOutputStreamTest.h \
    decaf/io/InputStreamReaderTest.h \
    decaf/io/InputStreamTest.h \
    decaf/io/OutputStreamTest.h \
    decaf/io/OutputStreamWriterTest.h \
    decaf/io/PushbackInputStreamTest.h \
    decaf/io/ReaderTest.h \
    decaf/io/WriterTest.h \
    decaf/lang/ArrayPointerTest.h \
    decaf/lang/BooleanTest.h \
    decaf/lang/ByteTest.h \
    decaf/lang/CharacterTest.h \
    decaf/lang/DoubleTest.h \
    decaf/lang/ExceptionTest.h \
    decaf/lang/FloatTest.h \
    decaf/lang/IntegerTest.h \
    decaf/lang/LongTest.h \
    decaf/lang/MathTest.h \
    decaf/lang/PointerTest.h \
    decaf/lang/ShortTest.h \
    decaf/lang/StringBufferTest.h \
    decaf/lang/StringBuilderTest.h \
    decaf/lang/StringTest.h \
    decaf/lang/SystemTest.h \
    decaf/lang/ThreadLocalTest.h \
    decaf/lang/ThreadTest.h \
    decaf/net/Inet4AddressTest.h \
    decaf/net/Inet6AddressTest.h \
    decaf/net/InetAddressTest.h \
    decaf/net/ServerSocketTest.h \
    decaf/net/SocketFactoryTest.h \
    decaf/net/SocketTest.h \
    decaf/net/URISyntaxExceptionTest.h \
    decaf/net/URITest.h \
    decaf/net/URLDecoderTest.h \
    decaf/net/URLEncoderTest.h \
    decaf/net/URLTest.h \
    decaf/net/ssl/SSLSocketFactoryTest.h \
    decaf/nio/BufferTest.h \
    decaf/security/MessageDigestTest.h \
    decaf/security/SecureRandomTest.h \
    decaf/util/AbstractCollectionTest.h \
    decaf/util/AbstractListTest.h \
    decaf/util/AbstractSequentialListTest.h \
    decaf/util/ArrayListTest.h \
    decaf/util/ArraysTest.h \
    decaf/util/BitSetTest.h \
    decaf/util/CollectionsTest.h \
    decaf/util/DateTest.h \
    decaf/util/Endian.h \
    decaf/util/HashCodeTest.h \
    decaf/util/HashMapTest.h \
    decaf/util/HashSetTest.h \
    decaf/util/LRUCacheTest.h \
    decaf/util/LinkedHashMapTest.h \
    decaf/util/LinkedHashSetTest.h \
    decaf/util/LinkedListTest.h \
    decaf/util/ListTest.h \
    decaf/util/PriorityQueueTest.h \
    decaf/util/PropertiesTest.h \
    decaf/util/QueueTest.h \
    decaf/util/RandomTest.h \
    decaf/util/SetTest.h \
    decaf/util/StlMapTest.h \
    decaf/util/StringTokenizerTest.h \
    decaf/util/TimerTest.h \
    decaf/util/UUIDTest.h \
    decaf/util/concurrent/AbstractExecutorServiceTest.h \
    decaf/util/concurrent/ConcurrentHashMapTest.h \
    decaf/util/concurrent/ConcurrentStlMapTest.h \
    decaf/util/concurrent/CopyOnWriteArrayListTest.h \
    decaf/util/concurrent/CopyOnWriteArraySetTest.h \
    decaf/util/concurrent/CountDownLatchTest.h \
    decaf/util/concurrent/ExecutorsTest.h \
    decaf/util/concurrent/ExecutorsTestSupport.h \
    decaf/util/concurrent/FutureTaskTest.h \
    decaf/util/concurrent/LinkedBlockingQueueTest.h \
    decaf/util/concurrent/MutexTest.h \
    decaf/util/concurrent/SemaphoreTest.h \
    decaf/util/concurrent/SynchronousQueueTest.h \
    decaf/util/concurrent/ThreadPoolExecutorTest.h \
    decaf/util/concurrent/TimeUnitTest.h \
    decaf/util/concurrent/atomic/AtomicBooleanTest.h \
    decaf/util/concurrent/atomic/AtomicIntegerTest.h \
    decaf/util/concurrent/atomic/AtomicReferenceTest.h \
    decaf/util/concurrent/locks/AbstractQueuedSynchronizerTest.h \
    decaf/util/concurrent/locks/LockSupportTest.h \
    decaf/util/concurrent/locks/ReentrantLockTest.h \
    decaf/util/concurrent/locks/ReentrantReadWriteLockTest.h \
    decaf/util/zip/Adler32Test.h \
    decaf/util/zip/CRC32Test.h \
    decaf/util/zip/CheckedInputStreamTest.h \
    decaf/util/zip/CheckedOutputStreamTest.h \
    decaf/util/zip/DeflaterOutputStreamTest.h \
    decaf/util/zip/DeflaterTest.h \
    decaf/util/zip/InflaterInputStreamTest.h \
    decaf/util/zip/InflaterTest.h \
    util/teamcity/TeamCityProgressListener.h


## Compile this as part of make check
check_PROGRAMS = decaf-test

## Also run the tests as part of make check
## TESTS = $(check_PROGRAMS)

## 
## Compiler/Linker Options
##
decaf_test_SOURCES = $(cc_sources)
decaf_test_CXXFLAGS = $(DECAF_TEST_CXXFLAGS) -I$(srcdir)/../main @CPPUNIT_CFLAGS@
decaf_test_LDADD= $(DECAF_TEST_LIBS) @CPPUNIT_LIBS@
